--- a/main.html
+++ b/main.html
@@ -7,7 +7,26 @@
 </head>
 
 <body>
+	<h1>Akshay kumar</h1>
+	<nav>
+	<a href="https://www.linkedin.com/in/akshaykumarofficial/">Linkedin</a>
+	</nav>
+		<img src=https://i.postimg.cc/RVgnBm41/c52ea6ec-8636-4795-bc70-51c68d5820d3.jpg alt="My image">
 	<!-- the entire body must be written by student -->
+	<section id="skills">
+		<h2>skills</h2>
+		<ul>
+			<li>CODER</li>
+			<li>software developer</li>
+		</ul>
+	</section>
+	<section id="projects">
+		<h2>Projects</h2>
+		<ul>
+			<li>DOG FEEDING</li>
+			<li>Amazon clone</li>
+		</ul>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
